projects/vb6parse/snapshots/tests/library/datetime/now/now_class_usage.snap
---
source: projects/vb6parse/tests/library/datetime/now.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: DimStatement
      children:
        - kind: PrivateKeyword
          text: Private
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: m_timestamp
        - kind: Whitespace
          text: " "
        - kind: AsKeyword
          text: As
        - kind: Whitespace
          text: " "
        - kind: DateKeyword
          text: Date
        - kind: Newline
          text: "\n"
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: PublicKeyword
          text: Public
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: UpdateTimestamp
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: Whitespace
              text: "    "
            - kind: AssignmentStatement
              children:
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: m_timestamp
                - kind: Whitespace
                  text: " "
                - kind: EqualityOperator
                  text: "="
                - kind: Whitespace
                  text: " "
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: Now
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
