projects/vb6parse/snapshots/tests/library/datetime/now/now_if_statement.snap
---
source: projects/vb6parse/tests/library/datetime/now.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: IfStatement
      children:
        - kind: IfKeyword
          text: If
        - kind: Whitespace
          text: " "
        - kind: BinaryExpression
          children:
            - kind: IdentifierExpression
              children:
                - kind: Identifier
                  text: Now
            - kind: Whitespace
              text: " "
            - kind: GreaterThanOperator
              text: ">"
            - kind: Whitespace
              text: " "
            - kind: IdentifierExpression
              children:
                - kind: Identifier
                  text: deadline
        - kind: Whitespace
          text: " "
        - kind: ThenKeyword
          text: Then
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: Whitespace
              text: "    "
            - kind: CallStatement
              children:
                - kind: Identifier
                  text: MsgBox
                - kind: Whitespace
                  text: " "
                - kind: ArgumentList
                  children:
                    - kind: Argument
                      children:
                        - kind: StringLiteralExpression
                          children:
                            - kind: StringLiteral
                              text: "\"Overdue\""
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: IfKeyword
          text: If
        - kind: Newline
          text: "\n"
